# xrpl-py

./: .gitignore  CONFIDENTIAL_MODULE_SUMMARY.md  build.py  debug_schnorr_verify.py  pyproject.toml  test_confidential_transactions.py  test_confidential_with_c_bindings.py
.github/workflows/: build-mpt-crypto-libs.yml  build-wheels.yml
tools/internal-ripplex-research-mpt-crypto/: README.md  generate_kats.c
tools/internal-ripplex-research-mpt-crypto/mpt-crypto/: CMakeLists.txt
tools/internal-ripplex-research-mpt-crypto/mpt-crypto/cmake/: Findsecp256k1.cmake
tools/internal-ripplex-research-mpt-crypto/mpt-crypto/examples/: generate_kats.c
tools/internal-ripplex-research-mpt-crypto/mpt-crypto/tests/: CMakeLists.txt  test_bulletproof.c  test_commitments.c  test_elgamal.c  test_elgamal_verify.c  test_equality_proof.c  test_link_proof.c  test_pok_sk.c  test_same_plaintext.c  test_same_plaintext_multi.c
tools/internal-ripplex-research-mpt-crypto/mpt-crypto/tools/: confidential_utility.cpp
xrpl/core/confidential/: INTEGRATION.md  README.md  SETUP.md  build_mpt_crypto.py
xrpl/core/confidential/examples/: README.md
xrpl/core/confidential/include/: README.md
xrpl/core/confidential/libs/: README.md
